// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExceptionsViewerItems Viewing EmptyViewerState it renders empty prompt if "viewerStatus" is "empty" 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="euiPanel euiPanel--transparent euiPanel--paddingMedium emotion-euiPanel-grow-m-m-transparent"
        style="margin: 24px 0px; padding: 24px 0px;"
      >
        <div
          class="euiPanel euiPanel--subdued euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge emotion-euiPanel-m-subdued"
          data-test-subj="empty_viewer_state"
        >
          <div
            class="euiEmptyPrompt__main"
          >
            <div
              class="euiEmptyPrompt__icon"
            >
              <span
                color="#343741"
                data-euiicon-type="plusInCircle"
              />
            </div>
            <div
              class="euiEmptyPrompt__content"
            >
              <div
                class="euiEmptyPrompt__contentInner"
              >
                <h2
                  class="euiTitle emotion-euiTitle-m"
                  data-test-subj="empty_title"
                >
                  Add exceptions to this rule
                </h2>
                <div
                  class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
                />
                <div
                  class="euiText emotion-euiText-m-euiTextColor-subdued"
                >
                  <p
                    data-test-subj="empty_body"
                  >
                    There is no exception in your rule. Create your first rule exception.
                  </p>
                </div>
                <div
                  class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
                />
                <div
                  class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentCenter euiFlexGroup--directionColumn euiFlexGroup--responsive euiEmptyPrompt__actions"
                >
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <button
                      class="euiButton euiButton--primary euiButton--fill"
                      data-test-subj="empty_state_button"
                      type="button"
                    >
                      <span
                        class="euiButtonContent euiButton__content"
                      >
                        <span
                          class="euiButtonContent__icon"
                          color="inherit"
                          data-euiicon-type="plusInCircle"
                        />
                        <span
                          class="euiButton__text"
                        >
                          Create rule exception
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-atomic="true"
      aria-live="assertive"
      id="rbd-announcement-0"
      style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%);"
    />
    <div
      id="rbd-hidden-text-0-hidden-text-0"
      style="display: none;"
    >
      
  Press space bar to start a drag.
  When dragging you can use the arrow keys to move the item around and escape to cancel.
  Some screen readers may require you to be in focus mode or to use your pass through key

    </div>
  </body>,
  "container": <div>
    <div
      class="euiPanel euiPanel--transparent euiPanel--paddingMedium emotion-euiPanel-grow-m-m-transparent"
      style="margin: 24px 0px; padding: 24px 0px;"
    >
      <div
        class="euiPanel euiPanel--subdued euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge emotion-euiPanel-m-subdued"
        data-test-subj="empty_viewer_state"
      >
        <div
          class="euiEmptyPrompt__main"
        >
          <div
            class="euiEmptyPrompt__icon"
          >
            <span
              color="#343741"
              data-euiicon-type="plusInCircle"
            />
          </div>
          <div
            class="euiEmptyPrompt__content"
          >
            <div
              class="euiEmptyPrompt__contentInner"
            >
              <h2
                class="euiTitle emotion-euiTitle-m"
                data-test-subj="empty_title"
              >
                Add exceptions to this rule
              </h2>
              <div
                class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
              />
              <div
                class="euiText emotion-euiText-m-euiTextColor-subdued"
              >
                <p
                  data-test-subj="empty_body"
                >
                  There is no exception in your rule. Create your first rule exception.
                </p>
              </div>
              <div
                class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
              />
              <div
                class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentCenter euiFlexGroup--directionColumn euiFlexGroup--responsive euiEmptyPrompt__actions"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <button
                    class="euiButton euiButton--primary euiButton--fill"
                    data-test-subj="empty_state_button"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButton__content"
                    >
                      <span
                        class="euiButtonContent__icon"
                        color="inherit"
                        data-euiicon-type="plusInCircle"
                      />
                      <span
                        class="euiButton__text"
                      >
                        Create rule exception
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ExceptionsViewerItems Viewing EmptyViewerState it renders exceptions if "viewerStatus" and "null" 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      aria-atomic="true"
      aria-live="assertive"
      id="rbd-announcement-0"
      style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%);"
    />
    <div
      aria-atomic="true"
      aria-live="assertive"
      id="rbd-announcement-1"
      style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%);"
    />
    .c5 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c5 > * {
  margin-right: 10px;
}

.c5 > *:last-child {
  margin-right: 0;
}

.c6 {
  white-space: nowrap;
}

.c7 {
  font-weight: bold;
}

.c0 {
  height: 50px;
}

.c8 {
  display: inline-block !important;
  vertical-align: middle !important;
}

.c11 {
  border: 1px;
  border-color: #d3dae6;
  border-style: solid;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  border-right: 1px solid #d3dae6;
  padding: 4px 12px 4px 0;
}

.c9 {
  margin: 10px 0;
}

.c9:first-child {
  margin: undefined 0 10px;
}

@media only screen and (min-width:400px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media only screen and (min-width:) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media only screen and (min-width:400px) {
  .c3 + .c2 {
    margin-top: 0;
    margin-left: 10px;
  }
}

@media only screen and (min-width:) {
  .c5 {
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
  }

  .c5 + .c4 {
    margin-top: 0;
  }

  .c5:last-child {
    border-right: none;
    margin-right: 0;
    padding-right: 0;
  }
}

<div>
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive c0"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <aside
            class="c1 siemUtilityBar"
          >
            <div
              class="c2 c3 siemUtilityBar__section"
            >
              <div
                class="c4 c5 siemUtilityBar__group"
              >
                <p
                  class="c6 siemUtilityBar__text"
                >
                  Showing 
                  <span
                    class="c7"
                  >
                    1-0
                  </span>
                   of 
                  <span
                    class="c7"
                  >
                    0
                  </span>
                </p>
              </div>
            </div>
          </aside>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            class="euiText emotion-euiText-s"
          >
            Updated 
            <span
              class="c8"
            >
              <span
                class="euiToolTipAnchor eui-textTruncate"
              >
                now
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive eui-yScrollWithShadows"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero eui-yScrollWithShadows"
        >
          <div
            class="euiFlexGroup euiFlexGroup--directionColumn euiFlexGroup--responsive"
            data-test-subj="exceptionsContainer"
          >
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero c9"
              data-test-subj="exceptionItemContainer"
            >
              <div
                class="euiPanel euiPanel--plain euiPanel--paddingLarge emotion-euiPanel-grow-m-l-plain-hasBorder"
                data-test-subj="exceptionItemsViewerItem"
              >
                <div
                  class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--directionColumn euiFlexGroup--responsive"
                >
                  <div
                    class="euiFlexItem"
                    data-test-subj="exceptionItemCard-header"
                  >
                    <div
                      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
                      data-test-subj="exceptionItemCardHeader"
                    >
                      <div
                        class="euiFlexItem euiFlexItem--flexGrow9"
                      >
                        <h3
                          class="euiTitle emotion-euiTitle-uppercase-xs"
                          data-test-subj="exceptionItemCardHeader-title"
                        >
                          some name
                        </h3>
                      </div>
                      <div
                        class="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <div
                          class="euiPopover emotion-euiPopover"
                          data-test-subj="exceptionItemCardHeader-items"
                        >
                          <div
                            class="euiPopover__anchor css-16vtueo-render"
                          >
                            <button
                              aria-label="Exception item actions menu"
                              class="euiButtonIcon euiButtonIcon--primary euiButtonIcon--empty euiButtonIcon--xSmall"
                              data-test-subj="exceptionItemCardHeader-actionButton"
                              type="button"
                            >
                              <span
                                aria-hidden="true"
                                class="euiButtonIcon__icon"
                                color="inherit"
                                data-euiicon-type="boxesHorizontal"
                              />
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiFlexItem"
                    data-test-subj="exceptionItemCard-meta"
                  >
                    <div
                      class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                      data-test-subj="exceptionItemCardMetaInfo"
                    >
                      <div
                        class="euiFlexItem euiFlexItem--flexGrowZero c10"
                      >
                        <div
                          class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                        >
                          <div
                            class="euiFlexItem euiFlexItem--flexGrowZero"
                          >
                            <div
                              class="euiText emotion-euiText-xs"
                              style="font-family: Inter;"
                            >
                              Created
                            </div>
                          </div>
                          <div
                            class="euiFlexItem euiFlexItem--flexGrowZero"
                            data-test-subj="exceptionItemCardMetaInfo-createdBy-value1"
                          >
                            <span
                              class="euiBadge euiBadge--iconLeft"
                              style="background-color: rgb(211, 218, 230); color: rgb(0, 0, 0); font-family: Inter;"
                              title="Apr 20, 2020 @ 15:25:31.830"
                            >
                              <span
                                class="euiBadge__content"
                              >
                                <span
                                  class="euiBadge__text"
                                >
                                  <span
                                    class="euiToolTipAnchor"
                                  >
                                    Apr 20, 2020 @ 15:25:31.830
                                  </span>
                                </span>
                              </span>
                            </span>
                          </div>
                          <div
                            class="euiFlexItem euiFlexItem--flexGrowZero"
                          >
                            <div
                              class="euiText emotion-euiText-xs"
                              style="font-family: Inter;"
                            >
                              by
                            </div>
                          </div>
                          <div
                            class="euiFlexItem euiFlexItem--flexGrowZero"
                            data-test-subj="exceptionItemCardMetaInfo-createdBy-value2"
                          >
                            <div
                              class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                            >
                              <div
                                class="euiFlexItem euiFlexItem--flexGrowZero"
                              >
                                <span
                                  class="euiBadge euiBadge--hollow euiBadge--iconLeft"
                                  style="font-family: Inter;"
                                  title="some user"
                                >
                                  <span
                                    class="euiBadge__content"
                                  >
                                    <span
                                      class="euiBadge__text"
                                    >
                                      some user
                                    </span>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="euiFlexItem euiFlexItem--flexGrowZero c10"
                      >
                        <div
                          class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                        >
                          <div
                            class="euiFlexItem euiFlexItem--flexGrowZero"
                          >
                            <div
                              class="euiText emotion-euiText-xs"
                              style="font-family: Inter;"
                            >
                              Updated
                            </div>
                          </div>
                          <div
                            class="euiFlexItem euiFlexItem--flexGrowZero"
                            data-test-subj="exceptionItemCardMetaInfo-updatedBy-value1"
                          >
                            <span
                              class="euiBadge euiBadge--iconLeft"
                              style="background-color: rgb(211, 218, 230); color: rgb(0, 0, 0); font-family: Inter;"
                              title="Apr 20, 2020 @ 15:25:31.830"
                            >
                              <span
                                class="euiBadge__content"
                              >
                                <span
                                  class="euiBadge__text"
                                >
                                  <span
                                    class="euiToolTipAnchor"
                                  >
                                    Apr 20, 2020 @ 15:25:31.830
                                  </span>
                                </span>
                              </span>
                            </span>
                          </div>
                          <div
                            class="euiFlexItem euiFlexItem--flexGrowZero"
                          >
                            <div
                              class="euiText emotion-euiText-xs"
                              style="font-family: Inter;"
                            >
                              by
                            </div>
                          </div>
                          <div
                            class="euiFlexItem euiFlexItem--flexGrowZero"
                            data-test-subj="exceptionItemCardMetaInfo-updatedBy-value2"
                          >
                            <div
                              class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                            >
                              <div
                                class="euiFlexItem euiFlexItem--flexGrowZero"
                              >
                                <span
                                  class="euiBadge euiBadge--hollow euiBadge--iconLeft"
                                  style="font-family: Inter;"
                                  title="some user"
                                >
                                  <span
                                    class="euiBadge__content"
                                  >
                                    <span
                                      class="euiBadge__text"
                                    >
                                      some user
                                    </span>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <div
                          class="euiPopover emotion-euiPopover"
                          data-test-subj="exceptionItemCardMetaInfo-items"
                        >
                          <div
                            class="euiPopover__anchor css-16vtueo-render"
                          >
                            <button
                              class="euiButtonEmpty euiButtonEmpty--primary"
                              data-test-subj="exceptionItemCardMetaInfo-affectedRulesButton"
                              type="button"
                            >
                              <span
                                class="euiButtonContent euiButtonEmpty__content"
                              >
                                <span
                                  class="euiButtonContent__icon"
                                  color="inherit"
                                  data-euiicon-type="list"
                                />
                                <span
                                  class="euiButtonEmpty__text"
                                >
                                  Affects 0 rules
                                </span>
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiFlexItem"
                    data-test-subj="exceptionItemCard-condition"
                  >
                    <div
                      class="euiPanel euiPanel--subdued euiPanel--paddingMedium c11 eui-xScroll emotion-euiPanel-grow-m-m-subdued"
                      data-test-subj="exceptionItemCardConditions"
                    >
                      <div>
                        <div
                          data-test-subj="exceptionItemCardConditions-some.parentFieldnested0-condition"
                        >
                          <div
                            class="c12"
                          >
                            <span
                              class="euiExpression emotion-euiExpression-primary"
                            >
                              <span
                                class="euiExpression__description emotion-euiExpression__description-primary-isUppercase"
                              />
                               
                              <span
                                class="euiExpression__value emotion-euiExpression__value"
                              >
                                some.parentField
                              </span>
                            </span>
                            <span
                              class="euiExpression emotion-euiExpression-success"
                            >
                              <span
                                class="euiExpression__description emotion-euiExpression__description-success-isUppercase"
                              />
                               
                              
                            </span>
                          </div>
                        </div>
                        <div
                          data-test-subj="exceptionItemCardConditions-nested.fieldmatchsome value0-condition"
                        >
                          <div
                            class="c12"
                          >
                            <div
                              class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive "
                              data-test-subj="nested-nested.fieldmatchsome value0-condition"
                            >
                              <span
                                class="euiToken emotion-euiToken-circle-light-s-euiColorVis2"
                              >
                                <span
                                  data-euiicon-type="tokenNested"
                                />
                              </span>
                              <div
                                class="c13"
                              >
                                <span
                                  class="euiExpression emotion-euiExpression-subdued"
                                >
                                  <span
                                    class="euiExpression__description emotion-euiExpression__description-subdued-isUppercase"
                                  />
                                   
                                  <span
                                    class="euiExpression__value emotion-euiExpression__value"
                                  >
                                    nested.field
                                  </span>
                                </span>
                                <span
                                  class="euiExpression emotion-euiExpression-success"
                                >
                                  <span
                                    class="euiExpression__description emotion-euiExpression__description-success-isUppercase"
                                  >
                                    IS
                                  </span>
                                   
                                  <span
                                    class="euiExpression__value emotion-euiExpression__value"
                                  >
                                    some value
                                  </span>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div>
                        <div
                          data-test-subj="exceptionItemCardConditions-some.not.nested.fieldmatchsome value1-condition"
                        >
                          <div
                            class="c12"
                          >
                            <span
                              class="euiExpression emotion-euiExpression-subdued"
                            >
                              <span
                                class="euiExpression__description emotion-euiExpression__description-subdued-isUppercase"
                              >
                                AND
                              </span>
                               
                              <span
                                class="euiExpression__value emotion-euiExpression__value"
                              >
                                some.not.nested.field
                              </span>
                            </span>
                            <span
                              class="euiExpression emotion-euiExpression-success"
                            >
                              <span
                                class="euiExpression__description emotion-euiExpression__description-success-isUppercase"
                              >
                                IS
                              </span>
                               
                              <span
                                class="euiExpression__value emotion-euiExpression__value"
                              >
                                some value
                              </span>
                            </span>
                          </div>
                        </div>
                        0
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--wrap eui-xScroll"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            class="euiPopover emotion-euiPopover"
          >
            <div
              class="euiPopover__anchor css-16vtueo-render"
            >
              <button
                class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall"
                data-test-subj="tablePaginationPopoverButton"
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                >
                  <span
                    class="euiButtonContent__icon"
                    color="inherit"
                    data-euiicon-type="arrowDown"
                  />
                  <span
                    class="euiButtonEmpty__text"
                  >
                    Showing all rows
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        />
      </div>
    </div>
    @media only screen and (min-width:400px) {

}

@media only screen and (min-width:) {

}

@media only screen and (min-width:400px) {

}

@media only screen and (min-width:) {

}

<div
      aria-atomic="true"
      aria-live="assertive"
      id="rbd-announcement-2"
      style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%);"
    />
    @media only screen and (min-width:400px) {

}

@media only screen and (min-width:) {

}

@media only screen and (min-width:400px) {

}

@media only screen and (min-width:) {

}

<div
      id="rbd-hidden-text-2-hidden-text-2"
      style="display: none;"
    >
      
  Press space bar to start a drag.
  When dragging you can use the arrow keys to move the item around and escape to cancel.
  Some screen readers may require you to be in focus mode or to use your pass through key

    </div>
  </body>,
  "container": <div>
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive sc-fznyAO jDuWwg"
    >
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <aside
          class="sc-AxjAm jEgbEf siemUtilityBar"
        >
          <div
            class="sc-AxirZ bfRyro siemUtilityBar__section"
          >
            <div
              class="sc-AxiKw khJIlV siemUtilityBar__group"
            >
              <p
                class="sc-AxhCb bPnMjC siemUtilityBar__text"
              >
                Showing 
                <span
                  class="sc-fzplWN kUIVEd"
                >
                  1-0
                </span>
                 of 
                <span
                  class="sc-fzplWN kUIVEd"
                >
                  0
                </span>
              </p>
            </div>
          </div>
        </aside>
      </div>
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <div
          class="euiText emotion-euiText-s"
        >
          Updated 
          <span
            class="sc-fznKkj llMpgQ"
          >
            <span
              class="euiToolTipAnchor eui-textTruncate"
            >
              now
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive eui-yScrollWithShadows"
    >
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero eui-yScrollWithShadows"
      >
        <div
          class="euiFlexGroup euiFlexGroup--directionColumn euiFlexGroup--responsive"
          data-test-subj="exceptionsContainer"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero sc-pmiWo cQkTBR"
            data-test-subj="exceptionItemContainer"
          >
            <div
              class="euiPanel euiPanel--plain euiPanel--paddingLarge emotion-euiPanel-grow-m-l-plain-hasBorder"
              data-test-subj="exceptionItemsViewerItem"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--directionColumn euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                  data-test-subj="exceptionItemCard-header"
                >
                  <div
                    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
                    data-test-subj="exceptionItemCardHeader"
                  >
                    <div
                      class="euiFlexItem euiFlexItem--flexGrow9"
                    >
                      <h3
                        class="euiTitle emotion-euiTitle-uppercase-xs"
                        data-test-subj="exceptionItemCardHeader-title"
                      >
                        some name
                      </h3>
                    </div>
                    <div
                      class="euiFlexItem euiFlexItem--flexGrowZero"
                    >
                      <div
                        class="euiPopover emotion-euiPopover"
                        data-test-subj="exceptionItemCardHeader-items"
                      >
                        <div
                          class="euiPopover__anchor css-16vtueo-render"
                        >
                          <button
                            aria-label="Exception item actions menu"
                            class="euiButtonIcon euiButtonIcon--primary euiButtonIcon--empty euiButtonIcon--xSmall"
                            data-test-subj="exceptionItemCardHeader-actionButton"
                            type="button"
                          >
                            <span
                              aria-hidden="true"
                              class="euiButtonIcon__icon"
                              color="inherit"
                              data-euiicon-type="boxesHorizontal"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="euiFlexItem"
                  data-test-subj="exceptionItemCard-meta"
                >
                  <div
                    class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                    data-test-subj="exceptionItemCardMetaInfo"
                  >
                    <div
                      class="euiFlexItem euiFlexItem--flexGrowZero sc-oVrtG fYZCZB"
                    >
                      <div
                        class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                      >
                        <div
                          class="euiFlexItem euiFlexItem--flexGrowZero"
                        >
                          <div
                            class="euiText emotion-euiText-xs"
                            style="font-family: Inter;"
                          >
                            Created
                          </div>
                        </div>
                        <div
                          class="euiFlexItem euiFlexItem--flexGrowZero"
                          data-test-subj="exceptionItemCardMetaInfo-createdBy-value1"
                        >
                          <span
                            class="euiBadge euiBadge--iconLeft"
                            style="background-color: rgb(211, 218, 230); color: rgb(0, 0, 0); font-family: Inter;"
                            title="Apr 20, 2020 @ 15:25:31.830"
                          >
                            <span
                              class="euiBadge__content"
                            >
                              <span
                                class="euiBadge__text"
                              >
                                <span
                                  class="euiToolTipAnchor"
                                >
                                  Apr 20, 2020 @ 15:25:31.830
                                </span>
                              </span>
                            </span>
                          </span>
                        </div>
                        <div
                          class="euiFlexItem euiFlexItem--flexGrowZero"
                        >
                          <div
                            class="euiText emotion-euiText-xs"
                            style="font-family: Inter;"
                          >
                            by
                          </div>
                        </div>
                        <div
                          class="euiFlexItem euiFlexItem--flexGrowZero"
                          data-test-subj="exceptionItemCardMetaInfo-createdBy-value2"
                        >
                          <div
                            class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                          >
                            <div
                              class="euiFlexItem euiFlexItem--flexGrowZero"
                            >
                              <span
                                class="euiBadge euiBadge--hollow euiBadge--iconLeft"
                                style="font-family: Inter;"
                                title="some user"
                              >
                                <span
                                  class="euiBadge__content"
                                >
                                  <span
                                    class="euiBadge__text"
                                  >
                                    some user
                                  </span>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="euiFlexItem euiFlexItem--flexGrowZero sc-oVrtG fYZCZB"
                    >
                      <div
                        class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                      >
                        <div
                          class="euiFlexItem euiFlexItem--flexGrowZero"
                        >
                          <div
                            class="euiText emotion-euiText-xs"
                            style="font-family: Inter;"
                          >
                            Updated
                          </div>
                        </div>
                        <div
                          class="euiFlexItem euiFlexItem--flexGrowZero"
                          data-test-subj="exceptionItemCardMetaInfo-updatedBy-value1"
                        >
                          <span
                            class="euiBadge euiBadge--iconLeft"
                            style="background-color: rgb(211, 218, 230); color: rgb(0, 0, 0); font-family: Inter;"
                            title="Apr 20, 2020 @ 15:25:31.830"
                          >
                            <span
                              class="euiBadge__content"
                            >
                              <span
                                class="euiBadge__text"
                              >
                                <span
                                  class="euiToolTipAnchor"
                                >
                                  Apr 20, 2020 @ 15:25:31.830
                                </span>
                              </span>
                            </span>
                          </span>
                        </div>
                        <div
                          class="euiFlexItem euiFlexItem--flexGrowZero"
                        >
                          <div
                            class="euiText emotion-euiText-xs"
                            style="font-family: Inter;"
                          >
                            by
                          </div>
                        </div>
                        <div
                          class="euiFlexItem euiFlexItem--flexGrowZero"
                          data-test-subj="exceptionItemCardMetaInfo-updatedBy-value2"
                        >
                          <div
                            class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                          >
                            <div
                              class="euiFlexItem euiFlexItem--flexGrowZero"
                            >
                              <span
                                class="euiBadge euiBadge--hollow euiBadge--iconLeft"
                                style="font-family: Inter;"
                                title="some user"
                              >
                                <span
                                  class="euiBadge__content"
                                >
                                  <span
                                    class="euiBadge__text"
                                  >
                                    some user
                                  </span>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="euiFlexItem euiFlexItem--flexGrowZero"
                    >
                      <div
                        class="euiPopover emotion-euiPopover"
                        data-test-subj="exceptionItemCardMetaInfo-items"
                      >
                        <div
                          class="euiPopover__anchor css-16vtueo-render"
                        >
                          <button
                            class="euiButtonEmpty euiButtonEmpty--primary"
                            data-test-subj="exceptionItemCardMetaInfo-affectedRulesButton"
                            type="button"
                          >
                            <span
                              class="euiButtonContent euiButtonEmpty__content"
                            >
                              <span
                                class="euiButtonContent__icon"
                                color="inherit"
                                data-euiicon-type="list"
                              />
                              <span
                                class="euiButtonEmpty__text"
                              >
                                Affects 0 rules
                              </span>
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="euiFlexItem"
                  data-test-subj="exceptionItemCard-condition"
                >
                  <div
                    class="euiPanel euiPanel--subdued euiPanel--paddingMedium sc-fzqBZW crMSZp eui-xScroll emotion-euiPanel-grow-m-m-subdued"
                    data-test-subj="exceptionItemCardConditions"
                  >
                    <div>
                      <div
                        data-test-subj="exceptionItemCardConditions-some.parentFieldnested0-condition"
                      >
                        <div
                          class="sc-fzoyAV dEYEJJ"
                        >
                          <span
                            class="euiExpression emotion-euiExpression-primary"
                          >
                            <span
                              class="euiExpression__description emotion-euiExpression__description-primary-isUppercase"
                            />
                             
                            <span
                              class="euiExpression__value emotion-euiExpression__value"
                            >
                              some.parentField
                            </span>
                          </span>
                          <span
                            class="euiExpression emotion-euiExpression-success"
                          >
                            <span
                              class="euiExpression__description emotion-euiExpression__description-success-isUppercase"
                            />
                             
                            
                          </span>
                        </div>
                      </div>
                      <div
                        data-test-subj="exceptionItemCardConditions-nested.fieldmatchsome value0-condition"
                      >
                        <div
                          class="sc-fzoyAV dEYEJJ"
                        >
                          <div
                            class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive sc-fznZeY lKsEH"
                            data-test-subj="nested-nested.fieldmatchsome value0-condition"
                          >
                            <span
                              class="euiToken emotion-euiToken-circle-light-s-euiColorVis2"
                            >
                              <span
                                data-euiicon-type="tokenNested"
                              />
                            </span>
                            <div
                              class="sc-fzqNJr lgXyNn"
                            >
                              <span
                                class="euiExpression emotion-euiExpression-subdued"
                              >
                                <span
                                  class="euiExpression__description emotion-euiExpression__description-subdued-isUppercase"
                                />
                                 
                                <span
                                  class="euiExpression__value emotion-euiExpression__value"
                                >
                                  nested.field
                                </span>
                              </span>
                              <span
                                class="euiExpression emotion-euiExpression-success"
                              >
                                <span
                                  class="euiExpression__description emotion-euiExpression__description-success-isUppercase"
                                >
                                  IS
                                </span>
                                 
                                <span
                                  class="euiExpression__value emotion-euiExpression__value"
                                >
                                  some value
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div>
                      <div
                        data-test-subj="exceptionItemCardConditions-some.not.nested.fieldmatchsome value1-condition"
                      >
                        <div
                          class="sc-fzoyAV dEYEJJ"
                        >
                          <span
                            class="euiExpression emotion-euiExpression-subdued"
                          >
                            <span
                              class="euiExpression__description emotion-euiExpression__description-subdued-isUppercase"
                            >
                              AND
                            </span>
                             
                            <span
                              class="euiExpression__value emotion-euiExpression__value"
                            >
                              some.not.nested.field
                            </span>
                          </span>
                          <span
                            class="euiExpression emotion-euiExpression-success"
                          >
                            <span
                              class="euiExpression__description emotion-euiExpression__description-success-isUppercase"
                            >
                              IS
                            </span>
                             
                            <span
                              class="euiExpression__value emotion-euiExpression__value"
                            >
                              some value
                            </span>
                          </span>
                        </div>
                      </div>
                      0
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--wrap eui-xScroll"
    >
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <div
          class="euiPopover emotion-euiPopover"
        >
          <div
            class="euiPopover__anchor css-16vtueo-render"
          >
            <button
              class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall"
              data-test-subj="tablePaginationPopoverButton"
              type="button"
            >
              <span
                class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
              >
                <span
                  class="euiButtonContent__icon"
                  color="inherit"
                  data-euiicon-type="arrowDown"
                />
                <span
                  class="euiButtonEmpty__text"
                >
                  Showing all rows
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ExceptionsViewerItems Viewing EmptyViewerState it renders no search results found prompt if "viewerStatus" is "empty_search" 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      aria-atomic="true"
      aria-live="assertive"
      id="rbd-announcement-0"
      style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%);"
    />
    <div>
      <div
        class="euiPanel euiPanel--subdued euiPanel--paddingMedium emotion-euiPanel-grow-m-m-subdued"
        style="margin: 24px 0px; padding: 24px 0px;"
      >
        <div
          class="euiPanel euiPanel--plain euiEmptyPrompt euiEmptyPrompt--horizontal euiEmptyPrompt--paddingLarge emotion-euiPanel-m-plain-hasBorder"
          data-test-subj="empty_search_viewer_state"
        >
          <div
            class="euiEmptyPrompt__main"
          >
            <div
              class="euiEmptyPrompt__icon"
            >
              <figure
                class="euiImageWrapper emotion-euiImageWrapper-fullWidth"
              >
                <img
                  alt=""
                  class="euiImage emotion-euiImage-fullWidth"
                  src="test-file-stub"
                />
              </figure>
            </div>
            <div
              class="euiEmptyPrompt__content"
            >
              <div
                class="euiEmptyPrompt__contentInner"
              >
                <h3
                  class="euiTitle emotion-euiTitle-m"
                  data-test-subj="empty_search_title"
                >
                  No results match your search criteria
                </h3>
                <div
                  class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
                />
                <div
                  class="euiText emotion-euiText-m-euiTextColor-subdued"
                >
                  <p
                    data-test-subj="empty_search_body"
                  >
                    Try modifying your search
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-atomic="true"
      aria-live="assertive"
      id="rbd-announcement-1"
      style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%);"
    />
    <div
      id="rbd-hidden-text-1-hidden-text-1"
      style="display: none;"
    >
      
  Press space bar to start a drag.
  When dragging you can use the arrow keys to move the item around and escape to cancel.
  Some screen readers may require you to be in focus mode or to use your pass through key

    </div>
  </body>,
  "container": <div>
    <div
      class="euiPanel euiPanel--subdued euiPanel--paddingMedium emotion-euiPanel-grow-m-m-subdued"
      style="margin: 24px 0px; padding: 24px 0px;"
    >
      <div
        class="euiPanel euiPanel--plain euiEmptyPrompt euiEmptyPrompt--horizontal euiEmptyPrompt--paddingLarge emotion-euiPanel-m-plain-hasBorder"
        data-test-subj="empty_search_viewer_state"
      >
        <div
          class="euiEmptyPrompt__main"
        >
          <div
            class="euiEmptyPrompt__icon"
          >
            <figure
              class="euiImageWrapper emotion-euiImageWrapper-fullWidth"
            >
              <img
                alt=""
                class="euiImage emotion-euiImage-fullWidth"
                src="test-file-stub"
              />
            </figure>
          </div>
          <div
            class="euiEmptyPrompt__content"
          >
            <div
              class="euiEmptyPrompt__contentInner"
            >
              <h3
                class="euiTitle emotion-euiTitle-m"
                data-test-subj="empty_search_title"
              >
                No results match your search criteria
              </h3>
              <div
                class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
              />
              <div
                class="euiText emotion-euiText-m-euiTextColor-subdued"
              >
                <p
                  data-test-subj="empty_search_body"
                >
                  Try modifying your search
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
